# UdpServerClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
UdpClient/: client.cpp
UdpServer/: server.cpp
include/: platform.h
src/: UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
